--- a/public/posters/index.html
+++ b/public/posters/index.html
@@ -410,11 +410,11 @@
 
 <div id="nihr-biomedical-research-council-poster-2019" class="section level2">
 <h2>NIHR Biomedical Research Council Poster 2019</h2>
-<p>Here is a link to my <a href="https://jodielordkcl.netlify.com/JL_BRC_Poster2019.pdf">poster</a> presented at the 2019 NIHR BRC Mausdley Conference in London.</p>
+<p>Here is a link to my <a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">poster</a> presented at the 2019 NIHR BRC Mausdley Conference in London.</p>
 </div>
 <div id="wcpg-poster-2019" class="section level2">
 <h2>WCPG Poster 2019</h2>
-<p>Here is a link to my latest <a href="https://jodielordkcl.netlify.com/WCPG2019_JodieLord.pdf">poster</a> presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles</p>
+<p>Here is a link to my latest <a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">poster</a> presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles</p>
 </div>
 
     </div>
