--- a/public/posters/index.html
+++ b/public/posters/index.html
@@ -248,7 +248,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link  active" href="/posters"><span>Academic Posters</span></a>
+          <a class="nav-link  active" href="/posters"><span>Academic Posters & Talks</span></a>
         </li>
 
         
