--- a/public/courses/example/example1/index.html
+++ b/public/courses/example/example1/index.html
@@ -248,7 +248,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/posters"><span>Academic Posters</span></a>
+          <a class="nav-link " href="/posters"><span>Academic Posters & Talks</span></a>
         </li>
 
         
