Adding center talk slides to posters.rmd

--- a/content/posters.html
+++ b/content/posters.html
@@ -7,11 +7,27 @@ output: html_document
 
 
 
-<div id="nihr-biomedical-research-council-poster-2019" class="section level2">
-<h2>NIHR Biomedical Research Council Poster 2019</h2>
-<p>Here is a link to my <a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">poster</a> presented at the 2019 NIHR BRC Mausdley Conference in London.</p>
-</div>
 <div id="wcpg-poster-2019" class="section level2">
 <h2>WCPG Poster 2019</h2>
-<p>Here is a link to my latest <a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">poster</a> presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles</p>
+<p><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link</a> to latest poster presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles.</p>
+<p><br/></p>
+</div>
+<div id="nihr-biomedical-research-council-poster-2019" class="section level2">
+<h2>NIHR Biomedical Research Council Poster 2019</h2>
+<p><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link</a> to poster presented at the 2019 NIHR BRC Mausdley Conference in London.</p>
+<p><br/></p>
+<hr />
+<p><br/></p>
+</div>
+<div id="talkspresentations" class="section level1">
+<h1>Talks/Presentations</h1>
+<p><br/></p>
+<div id="maurice-wohl-clinical-neuroscience-institute---2019" class="section level2">
+<h2>Maurice Wohl Clinical Neuroscience Institute - 2019</h2>
+<p>Center Talk:
+<a href="https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf">“Investigating the role of modifiable risk factors on the causal pathway to Alzheimer’s Disease”</a>.</p>
+<p><br/>
+<br/>
+<br/></p>
+</div>
 </div>
