--- a/content/posters.html
+++ b/content/posters.html
@@ -7,23 +7,22 @@ output: html_document
 
 
 
-<div id="wcpg-poster-2019" class="section level2">
-<h2>WCPG Poster 2019</h2>
-<p><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link</a> to latest poster presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles.</p>
-<p><br/></p>
+<div id="wcpg-poster-2019" class="section level4">
+<h4>WCPG Poster 2019</h4>
+<p><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to latest poster</a> presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles.
+<br/></p>
 </div>
-<div id="nihr-biomedical-research-council-poster-2019" class="section level2">
-<h2>NIHR Biomedical Research Council Poster 2019</h2>
-<p><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link</a> to poster presented at the 2019 NIHR BRC Mausdley Conference in London.</p>
+<div id="nihr-biomedical-research-council-poster-2019" class="section level4">
+<h4>NIHR Biomedical Research Council Poster 2019</h4>
+<p><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Mausdley Conference in London.</p>
 <p><br/></p>
 <hr />
 <p><br/></p>
 </div>
 <div id="talkspresentations" class="section level1">
 <h1>Talks/Presentations</h1>
-<p><br/></p>
-<div id="maurice-wohl-clinical-neuroscience-institute---2019" class="section level2">
-<h2>Maurice Wohl Clinical Neuroscience Institute - 2019</h2>
+<div id="maurice-wohl-clinical-neuroscience-institute---2019" class="section level4">
+<h4>Maurice Wohl Clinical Neuroscience Institute - 2019</h4>
 <p>Center Talk:
 <a href="https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf">“Investigating the role of modifiable risk factors on the causal pathway to Alzheimer’s Disease”</a>.</p>
 <p><br/>
