minor formatting changes to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -549,13 +549,13 @@
 Jodie is a PhD student who is currently working within the department of Basic and Clinical Neuroscience at King&rsquo;s College London. Using large biological datasets and statistical modelling techniques, her work focusses on the integration of multi-omic modalities in order to better predict Alzheimer&rsquo;s Disease risk.
 <br/>
 <br/>
-In tandem with her PhD, Jodie is also currently:
-<br/>
-<strong>1.</strong> Completing a Statistical Modelling and Health Informatics PGCert at KCL.   <em>Programming languages include R, Python and STATA</em>.
-<br/>
-<strong>2.</strong> Working as a Graduate Teaching Assistant within KCL&rsquo;s Psychology department. <em>In 2020, this will include leading the &ldquo;Big Data Analytics in Python&rdquo; skills module.</em>
-<br/>
-<strong>3.</strong> Working part-time (weekends) at The Priory Hospital in Roehampton. <em>Predominantly within child and adolescent mental health, and eating disorder wards.</em></p>
+In tandem with her PhD, Jodie is also currently:</p>
+
+<ul>
+<li>Completing a Statistical Modelling and Health Informatics PGCert at KCL.   <em>Programming languages include R, Python and STATA</em>.</li>
+<li>Working as a Graduate Teaching Assistant within KCL&rsquo;s Psychology department. <em>In 2020, this will include leading the &ldquo;Big Data Analytics in Python&rdquo; skills module.</em></li>
+<li>Working part-time (weekends) at The Priory Hospital in Roehampton. <em>Predominantly within child and adolescent mental health, and eating disorder wards.</em></li>
+</ul>
 
 
     <div class="row">
