adding learning material

--- a/content/posters.html
+++ b/content/posters.html
@@ -1,5 +1,5 @@
 ---
-title: "Academic Posters"
+title: ""
 author: "Jodie Lord"
 date: "06/10/2019"
 output: html_document
@@ -7,25 +7,41 @@ output: html_document
 
 
 
+<hr />
+<div id="academic-posters" class="section level1">
+<h1>Academic Posters</h1>
+<hr />
+<p><br/></p>
 <div id="wcpg-poster-2019" class="section level4">
 <h4>WCPG Poster 2019</h4>
-<p><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to latest poster</a> presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles.
-<br/></p>
+<ul>
+<li><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to academic poster</a> presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.
+<br/>
+<br/></li>
+</ul>
 </div>
 <div id="nihr-biomedical-research-council-poster-2019" class="section level4">
 <h4>NIHR Biomedical Research Council Poster 2019</h4>
-<p><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Mausdley Conference in London.</p>
+<ul>
+<li><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Mausdley Conference in London.</li>
+</ul>
 <p><br/></p>
 <hr />
 </div>
+</div>
 <div id="talkspresentations" class="section level1">
 <h1>Talks/Presentations</h1>
+<hr />
+<p><br/></p>
 <div id="maurice-wohl-clinical-neuroscience-institute---2019" class="section level4">
 <h4>Maurice Wohl Clinical Neuroscience Institute - 2019</h4>
-<p>Center Talk:
-<a href="https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf">“Investigating the role of modifiable risk factors on the causal pathway to Alzheimer’s Disease”</a>.</p>
+<ul>
+<li>Center Talk:
+<a href="https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf">“Investigating the role of modifiable risk factors on the causal pathway to Alzheimer’s Disease”</a>.</li>
+</ul>
 <p><br/>
-<br/>
 <br/></p>
+<hr />
+<p><br/></p>
 </div>
 </div>
