adding learning material

--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -28,8 +28,7 @@
   
     
   
-  <meta name="description" content="Learning Material 
-Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to Omics.">
+  <meta name="description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to Omics.">
 
   
   <link rel="alternate" hreflang="en-us" href="/teaching/">
@@ -118,8 +117,7 @@ Python workshop material and solutions  Material and solutions across 4 introduc
   <meta property="og:site_name" content="Jodie Lord, King&#39;s College London">
   <meta property="og:url" content="/teaching/">
   <meta property="og:title" content=" | Jodie Lord, King&#39;s College London">
-  <meta property="og:description" content="Learning Material 
-Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to Omics."><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to Omics."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -432,7 +430,6 @@ Python workshop material and solutions  Material and solutions across 4 introduc
 <div id="learning-material" class="section level1">
 <h1>Learning Material</h1>
 <hr />
-<p><br/></p>
 <div id="python-workshop-material-and-solutions" class="section level4">
 <h4>Python workshop material and solutions</h4>
 <ul>
