--- a/public/index.html
+++ b/public/index.html
@@ -575,14 +575,7 @@
 <p><strong>Current commitments alongside this PhD include:</strong></p>
 
 <ul>
-<li><p>Part-time MSc in Statistical Modelling and Health Informatics (Dep. of Biostatistics,KCL).</p>
-
-<ul>
-<li>Programming languages include R, Python and STATA.</li>
-<li>Project will focuss on exploratory mediation to identify key mediators within high dimensional datasets.
-<br />
-<br /></li>
-</ul></li>
+<li><p>Part-time MSc in Statistical Modelling and Health Informatics (Dep. of Biostatistics,KCL) - Project will focuss on exploratory mediation to identify key mediators within high dimensional datasets. <em>Programming languages include R, Python and STATA.</em></p></li>
 
 <li><p>Graduate Teaching Assistant (Dep. of Psychology, KCL) - Includes acting as module lead for the &ldquo;Big Data Analytics in Python&rdquo; skills mini-module.</p></li>
 
