Updating presentation and cv information

--- a/content/posters.html
+++ b/content/posters.html
@@ -33,6 +33,14 @@ output: html_document
 <h1>Talks/Presentations</h1>
 <hr />
 <p><br/></p>
+<div id="social-genetic-and-developmental-psychiatry-centre-sgdp---2020" class="section level4">
+<h4>Social, Genetic and Developmental Psychiatry Centre (SGDP) - 2020</h4>
+<ul>
+<li>SGU Methods Meeting:
+<a href="https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf">“Mendelian Randomization: Introduction to methods and applications”</a>.</li>
+</ul>
+<p><br/></p>
+</div>
 <div id="maurice-wohl-clinical-neuroscience-institute---2019" class="section level4">
 <h4>Maurice Wohl Clinical Neuroscience Institute - 2019</h4>
 <ul>
