updating error in iscb poster

--- a/content/posters.html
+++ b/content/posters.html
@@ -15,7 +15,7 @@ output: html_document
 <div id="iscb-poster-2020" class="section level4">
 <h4>ISCB Poster 2020</h4>
 <ul>
-<li><a href="ISCB_poster_2020_animated.gif">Link to academic work</a> presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
+<li><a href="https://jodielord.netlify.com/ISCB_poster_2020_animated.gif">Link to academic work</a> presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
 <br/>
 <br/></li>
 </ul>
