--- a/public/posters/index.html
+++ b/public/posters/index.html
@@ -29,7 +29,7 @@
     
   
   <meta name="description" content="Academic Posters 
-ISCB Poster 2020  Link to academic work presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).     WCPG Poster 2019  Link to poster presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.     NIHR Biomedical Research Council Poster 2019  Link to poster presented at the 2019 NIHR BRC Mausdley Conference in London.">
+ISCB Poster 2020  Link to work presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).     WCPG Poster 2019  Link to poster presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.     NIHR Biomedical Research Council Poster 2019  Link to poster presented at the 2019 NIHR BRC Mausdley Conference in London.">
 
   
   <link rel="alternate" hreflang="en-us" href="/posters/">
@@ -119,7 +119,7 @@ ISCB Poster 2020  Link to academic work presented at the 2020 conference of the 
   <meta property="og:url" content="/posters/">
   <meta property="og:title" content=" | Jodie Lord, King&#39;s College London">
   <meta property="og:description" content="Academic Posters 
-ISCB Poster 2020  Link to academic work presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).     WCPG Poster 2019  Link to poster presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.     NIHR Biomedical Research Council Poster 2019  Link to poster presented at the 2019 NIHR BRC Mausdley Conference in London."><meta property="og:image" content="/img/icon-192.png">
+ISCB Poster 2020  Link to work presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).     WCPG Poster 2019  Link to poster presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.     NIHR Biomedical Research Council Poster 2019  Link to poster presented at the 2019 NIHR BRC Mausdley Conference in London."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -458,7 +458,7 @@ ISCB Poster 2020  Link to academic work presented at the 2020 conference of the 
 <div id="iscb-poster-2020" class="section level4">
 <h4>ISCB Poster 2020</h4>
 <ul>
-<li><a href="https://jodielord.netlify.com/ISCB_poster_2020_animated.gif">Link to academic work</a> presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
+<li><a href="https://jodielord.netlify.com/ISCB_poster_2020_animated.gif">Link to work</a> presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
 <br/>
 <br/></li>
 </ul>
