adding R teaching material and updating pubs

--- a/content/teaching.html
+++ b/content/teaching.html
@@ -37,6 +37,15 @@ output: html_document
 <div id="introductory-primers" class="section level3">
 <h3>Introductory primers</h3>
 <ul>
+<li><a href="https://jodielord.netlify.com/Intro_R.pdf">Introduction to R and RStudio.</a>
+<ul>
+<li>What is R/RStudio?</li>
+<li>How do I access and navigate RStudio?</li>
+<li>basic functionality</li>
+<li>Useful resources
+<br/>
+<br/></li>
+</ul></li>
 <li><a href="https://jodielord.netlify.com/Introduction_to_omics.pdf">Introduction to Omics.</a>
 <ul>
 <li>Intro to high dimensional data (HDD).</li>
