--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to Omics.">
+  <meta name="description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to R and RStudio.">
 
   
   <link rel="alternate" hreflang="en-us" href="/teaching/">
@@ -117,7 +117,7 @@
   <meta property="og:site_name" content="Jodie Lord, King&#39;s College London">
   <meta property="og:url" content="/teaching/">
   <meta property="og:title" content=" | Jodie Lord, King&#39;s College London">
-  <meta property="og:description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to Omics."><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to R and RStudio."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -478,6 +478,15 @@
 <div id="introductory-primers" class="section level3">
 <h3>Introductory primers</h3>
 <ul>
+<li><a href="https://jodielord.netlify.com/Intro_R.pdf">Introduction to R and RStudio.</a>
+<ul>
+<li>What is R/RStudio?</li>
+<li>How do I access and navigate RStudio?</li>
+<li>basic functionality</li>
+<li>Useful resources
+<br/>
+<br/></li>
+</ul></li>
 <li><a href="https://jodielord.netlify.com/Introduction_to_omics.pdf">Introduction to Omics.</a>
 <ul>
 <li>Intro to high dimensional data (HDD).</li>
