--- a/content/papers.html
+++ b/content/papers.html
@@ -8,6 +8,21 @@ output: html_document
 
 
 <hr />
+<div id="publications" class="section level1">
+<h1>Publications</h1>
+<hr />
+<ul>
+<li><h3 id="integrated-lipidomics-and-proteomics-network-analysis-highlights-lipid-and-immunity-pathways-associated-with-alzheimers-disease"><a href="https://link.springer.com/epdf/10.1186/s40035-020-00215-0?sharing_token=rDhcqrDwxHpPr9KVQnNAQm_BpE1tBhCbnbw3BuzI2RMack7kbujqP_X-ofWsx-46ldfN8uNgddF6WQJfINxSB6Wsva1Vqwae_tqTdQl2TrKHAl08e7-qKVWzx4Ae986dEAZF2P308PiyisWZpKP16t2NcjKBdygtKOfwRVD1Nno%3D">Integrated lipidomics and proteomics network analysis highlights lipid and immunity pathways associated with Alzheimer’s disease</a></h3>
+<br/>
+<em>Jin Xu, Giulia Bankov, Min Kim, Asger Wretlind, <strong>Jodie Lord</strong>, Rebecca Green, Angela Hodges, Abdul Hye, Dag Aarsland, Latha Velayudhan, Richard J.B. Dobson, Petroula Proitsi, Cristina Legido-Quigley, on behalf of the AddNeuroMed Consortium (2020). Translational Neurodegeneration. 9,1, p.36</em>
+<br/>
+<br/>
+Background: There is an urgent need to understand the pathways and processes underlying Alzheimer’s disease (AD) for early diagnosis and development of effective treatments. This study was aimed to investigate Alzheimer’s dementia using an unsupervised lipid, protein and gene multi-omics integrative approach. Methods: A lipidomics dataset comprising 185 AD patients, 40 mild cognitive impairment (MCI) individuals and 185 controls, and two proteomics datasets (295 AD, 159 MCI and 197 controls) were used for weighted gene coexpression network analyses (WGCNA). Correlations of modules created within each modality with clinical AD diagnosis, brain atrophy measures and disease progression, as well as their correlations with each other, were analyzed. Gene ontology enrichment analysis was employed to examine the biological processes and molecular and cellular functions of protein modules associated with AD phenotypes. Lipid species were annotated in the lipid modules associated with AD phenotypes. The associations between established AD risk loci and the lipid/protein modules that showed high correlation with AD phenotypes were also explored. Results: Five of the 20 identified lipid modules and five of the 17 identified protein modules were correlated with clinical AD diagnosis, brain atrophy measures and disease progression. The lipid modules comprising phospholipids, triglycerides, sphingolipids and cholesterol esters were correlated with AD risk loci involved in immune response and lipid metabolism. The five protein modules involved in positive regulation of cytokine production, neutrophilmediated immunity, and humoral immune responses were correlated with AD risk loci involved in immune and complement systems and in lipid metabolism (the APOE ε4 genotype).
+<br/>
+<br/></li>
+</ul>
+<hr />
+</div>
 <div id="open-access-pre-prints" class="section level1">
 <h1>Open Access Pre-prints</h1>
 <hr />
@@ -21,7 +36,7 @@ output: html_document
 BACKGROUND: There are currently no disease modifying treatments for Alzheimers Disease (AD). Epidemiological studies have highlighted blood metabolites as potential biomarkers, but possible confounding and reverse causation prevent causal conclusions. Here, we investigated whether nineteen metabolites previously associated with midlife cognitive function, are on the causal pathway to AD. METHODS: Summary statistics from the largest Genome-Wide Association Studies (GWAS) for AD and for metabolites were used to perform bi-directional univariable Mendelian Randomisation (MR). Bayesian model averaging MR (MR-BMA) was additionally performed to address high correlation between metabolites and to identify metabolite combinations which may be on the AD causal pathway. RESULTS: Univariable MR indicated three Extra-Large High-Density Lipoproteins (XL.HDL) to be on the causal pathway to AD: Free Cholesterol (XL.HDL.FC: OR=0.86, 95% CI=0.78-0.94), Total Lipids (XL.HDL.L: OR=0.88, 95% CI=0.80-0.97), and Phospholipids (XL.HDL.PL: OR=0.87, 95% CI=0.81-0.97); significant at an adjusted threshold of p&lt;0.009. MR-BMA corroborated XL.HDL.FC to be amongst the top three causal metabolites, additionally to Total Cholesterol in XL.HDL (XL.HDL.C) and Glycoprotein Acetyls (GP) (posterior probabilities=0.112, 0.113, 0.287 respectively). Both XL.HDL.C and GP also demonstrated suggestive evidence of univariable causal associations (XL.HDL.C:OR=0.88, 95% CI=0.79-0.99; GP:OR=1.2, 95% CI=1.05-1.38); significant at the 5% level. DISCUSSION: This study offers insight into the causal relationship between metabolites previously demonstrating association with mid-life cognition, and AD. It highlights GP in addition to several XL.HDLs as causal candidates which warrant further investigation. As the pathological changes underpinning AD are thought to develop decades prior to symptom onset, progressing these findings could hold special value in informing future risk reduction strategies.
 <br/>
 <br/></p></li>
-<li><h3 id="integrated-lipidomics-and-proteomics-network-analysis-highlights-lipid-and-immunity-pathways-associated-with-alzheimers-disease"><a href="https://www.biorxiv.org/content/10.1101/2020.03.18.995464v2">Integrated lipidomics and proteomics network analysis highlights lipid and immunity pathways associated with Alzheimer’s disease</a></h3>
+<li><h3 id="integrated-lipidomics-and-proteomics-network-analysis-highlights-lipid-and-immunity-pathways-associated-with-alzheimers-disease-1"><a href="https://www.biorxiv.org/content/10.1101/2020.03.18.995464v2">Integrated lipidomics and proteomics network analysis highlights lipid and immunity pathways associated with Alzheimer’s disease</a></h3>
 <p><br/>
 <em>Jin Xu, Giulia Bankov, Min Kim, Asger Wretlind, <strong>Jodie Lord</strong>, Rebecca Green, Angela Hodges, Abdul Hye, Dag Aarsland, Latha Velayudhan, Richard J.B. Dobson, Petroula Proitsi, Cristina Legido-Quigley, on behalf of the AddNeuroMed Consortium (2020)</em>
 <br/>
