adding SGU presentation

--- a/content/posters.html
+++ b/content/posters.html
@@ -41,6 +41,14 @@ output: html_document
 <h1>Talks/Presentations</h1>
 <hr />
 <p><br/></p>
+<div id="staistical-genetics-unit---october-2020" class="section level4">
+<h4>Staistical Genetics Unit - October 2020</h4>
+<ul>
+<li>Journal Club Presentation:
+<a href="https://jodielord.netlify.com/JournalClub_1020.pdf">“A Fast and Scalable Framework for Large-scale and Ultrahigh-dimensional Sparse Regression with Application in the Uk Biobank”</a>.</li>
+</ul>
+<p><br/></p>
+</div>
 <div id="social-genetic-and-developmental-psychiatry-centre-sgdp---2020" class="section level4">
 <h4>Social, Genetic and Developmental Psychiatry Centre (SGDP) - 2020</h4>
 <ul>
