--- a/public/index.html
+++ b/public/index.html
@@ -467,7 +467,7 @@
 
       <div class="portrait-title">
         <h2>Jodie Lord</h2>
-        <h3>PhD Student - Neuroscience</br> (Integrative Omics)</h3>
+        <h3>PhD Student</h3>
 
         
         <h3>
@@ -590,18 +590,18 @@
     <h1>Biography</h1>
 
     <ul>
-<li>PhD student working within the department of Basic and Clinical Neuroscience at King&rsquo;s College London. Project focusses on the integration of multi-omic modalities in order to better predict Alzheimer&rsquo;s Disease risk.
+<li>PhD student within the department of Basic and Clinical Neuroscience, King&rsquo;s College London. Project focusses on the integration of metabolomics, genomics and other modalities to better predict Alzheimer&rsquo;s Disease risk.
 <br/></li>
 </ul>
 
 <p><strong>Additional current commitments:</strong></p>
 
 <ul>
-<li><p>Part-time MSc in Statistical Modelling and Health Informatics (Dep. of Biostatistics,KCL) 🔜 Project will focus on exploratory mediation models to identify key mediators within high dimensional datasets.</p></li>
+<li><p>Part-time MSc: Applied Statistical Modelling and Health Informatics. Dep. of Biostatistics, KCL. Project focusses on high-dimensional mediation methods to identify key mediators within large-scale, highly correlated data.</p></li>
 
-<li><p>Graduate Teaching Assistant (Dep. of Psychology, KCL) - Includes acting as module lead for the &ldquo;Big Data Analytics in Python&rdquo; skills mini-module.</p></li>
+<li><p>Graduate Teaching Assistant. Dep. of Psychology, KCL - Includes acting as lead for the &ldquo;Big Data Analytics in Python&rdquo; skills mini-module.</p></li>
 
-<li><p>Health-care work at The Priory Hospital, Roehampton - Predominantly based within child and adolescent mental health, and eating disorder wards.</p></li>
+<li><p>Health-care work. The Priory Hospital, Roehampton - Predominantly based within child and adolescent mental health and eating disorder wards.</p></li>
 </ul>
 
 
