--- a/public/index.html
+++ b/public/index.html
@@ -589,10 +589,8 @@
     
     <h1>Biography</h1>
 
-    <ul>
-<li>PhD student within the department of Basic and Clinical Neuroscience, King&rsquo;s College London. Project focusses on the integration of metabolomics, genomics and other modalities to better predict Alzheimer&rsquo;s Disease risk.
-<br/></li>
-</ul>
+    <p>PhD student within the department of Basic and Clinical Neuroscience, King&rsquo;s College London. Project focusses on the integration of metabolomics, genomics and other modalities to better predict Alzheimer&rsquo;s Disease risk.
+<br/></p>
 
 <p><strong>Additional current commitments:</strong></p>
 
