updating learning material

--- a/content/teaching.html
+++ b/content/teaching.html
@@ -16,18 +16,19 @@ output: html_document
 <ul>
 <li><a href="https://github.com/jodielord/python_teaching_material">Material and solutions</a> across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:
 <ul>
-<li>Object assignment</li>
-<li>Basic arithmetic 🔢</li>
-<li>Core data types (integers, lists, dictionaries etc)</li>
-<li>Slicing 🗡</li>
-<li>Loops 🔃</li>
-<li>Libraries 📚</li>
-<li>Pandas 🐼</li>
-<li>Data mining ⛏</li>
-<li>Data merging 👫</li>
-<li>Basic statistics 📈</li>
-<li>Charting 🐬📊</li>
-<li>Intro to basic machine learning 🎰
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Object assignment</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Basic arithmetic</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Core data types</a> (integers, lists, dictionaries etc)</li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Slicing</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Loops</a><br />
+</li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Libraries</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Pandas</a> 🐼</li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Data mining</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Data merging</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session3/Session3.ipynb">Basic statistics</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session3/Session3.ipynb">Charting</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session4_Solutions/Session4_Solutions.ipynb">Intro to basic machine learning</a> (for complete beginners)
 <br/>
 <br/></li>
 </ul></li>
