--- a/public/posters/index.html
+++ b/public/posters/index.html
@@ -29,7 +29,7 @@
     
   
   <meta name="description" content="Academic Posters 
-ISCB Poster 2020  Link to work presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).     WCPG Poster 2019  Link to poster presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.     NIHR Biomedical Research Council Poster 2019  Link to poster presented at the 2019 NIHR BRC Mausdley Conference in London.">
+ISCB Poster 2020  Link to work presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).     WCPG Poster 2019  Link to poster presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.     NIHR Biomedical Research Council Poster 2019  Link to poster presented at the 2019 NIHR BRC Maudsley Conference, London.">
 
   
   <link rel="alternate" hreflang="en-us" href="/posters/">
@@ -119,7 +119,7 @@ ISCB Poster 2020  Link to work presented at the 2020 conference of the Internati
   <meta property="og:url" content="/posters/">
   <meta property="og:title" content=" | Jodie Lord, King&#39;s College London">
   <meta property="og:description" content="Academic Posters 
-ISCB Poster 2020  Link to work presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).     WCPG Poster 2019  Link to poster presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.     NIHR Biomedical Research Council Poster 2019  Link to poster presented at the 2019 NIHR BRC Mausdley Conference in London."><meta property="og:image" content="/img/icon-192.png">
+ISCB Poster 2020  Link to work presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).     WCPG Poster 2019  Link to poster presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.     NIHR Biomedical Research Council Poster 2019  Link to poster presented at the 2019 NIHR BRC Maudsley Conference, London."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -466,7 +466,7 @@ ISCB Poster 2020  Link to work presented at the 2020 conference of the Internati
 <div id="wcpg-poster-2019" class="section level4">
 <h4>WCPG Poster 2019</h4>
 <ul>
-<li><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to poster</a> presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.
+<li><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to poster</a> presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.
 <br/>
 <br/></li>
 </ul>
@@ -474,7 +474,7 @@ ISCB Poster 2020  Link to work presented at the 2020 conference of the Internati
 <div id="nihr-biomedical-research-council-poster-2019" class="section level4">
 <h4>NIHR Biomedical Research Council Poster 2019</h4>
 <ul>
-<li><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Mausdley Conference in London.</li>
+<li><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Maudsley Conference, London.</li>
 </ul>
 <p><br/></p>
 <hr />
