--- a/content/posters.html
+++ b/content/posters.html
@@ -23,7 +23,7 @@ output: html_document
 <div id="wcpg-poster-2019" class="section level4">
 <h4>WCPG Poster 2019</h4>
 <ul>
-<li><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to poster</a> presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.
+<li><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to poster</a> presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.
 <br/>
 <br/></li>
 </ul>
@@ -31,7 +31,7 @@ output: html_document
 <div id="nihr-biomedical-research-council-poster-2019" class="section level4">
 <h4>NIHR Biomedical Research Council Poster 2019</h4>
 <ul>
-<li><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Mausdley Conference in London.</li>
+<li><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Maudsley Conference, London.</li>
 </ul>
 <p><br/></p>
 <hr />
