--- a/public/teaching/index.html
+++ b/public/teaching/index.html
@@ -28,7 +28,8 @@
   
     
   
-  <meta name="description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to R and RStudio.">
+  <meta name="description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic Core data types (integers, lists, dictionaries etc) Slicing Loops
+ Libraries Pandas 🐼 Data mining Data merging Basic statistics Charting Intro to basic machine learning (for complete beginners)      Introductory primers  Introduction to R and RStudio.  What is R/RStudio?">
 
   
   <link rel="alternate" hreflang="en-us" href="/teaching/">
@@ -117,7 +118,8 @@
   <meta property="og:site_name" content="Jodie Lord, King&#39;s College London">
   <meta property="og:url" content="/teaching/">
   <meta property="og:title" content=" | Jodie Lord, King&#39;s College London">
-  <meta property="og:description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic 🔢 Core data types (integers, lists, dictionaries etc) Slicing 🗡 Loops 🔃 Libraries 📚 Pandas 🐼 Data mining ⛏ Data merging 👫 Basic statistics 📈 Charting 🐬📊 Intro to basic machine learning 🎰      Introductory primers  Introduction to R and RStudio."><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="Learning Material Python workshop material and solutions  Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:  Object assignment Basic arithmetic Core data types (integers, lists, dictionaries etc) Slicing Loops
+ Libraries Pandas 🐼 Data mining Data merging Basic statistics Charting Intro to basic machine learning (for complete beginners)      Introductory primers  Introduction to R and RStudio.  What is R/RStudio?"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -457,18 +459,19 @@
 <ul>
 <li><a href="https://github.com/jodielord/python_teaching_material">Material and solutions</a> across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:
 <ul>
-<li>Object assignment</li>
-<li>Basic arithmetic 🔢</li>
-<li>Core data types (integers, lists, dictionaries etc)</li>
-<li>Slicing 🗡</li>
-<li>Loops 🔃</li>
-<li>Libraries 📚</li>
-<li>Pandas 🐼</li>
-<li>Data mining ⛏</li>
-<li>Data merging 👫</li>
-<li>Basic statistics 📈</li>
-<li>Charting 🐬📊</li>
-<li>Intro to basic machine learning 🎰
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Object assignment</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Basic arithmetic</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Core data types</a> (integers, lists, dictionaries etc)</li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Slicing</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Loops</a><br />
+</li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Libraries</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Pandas</a> 🐼</li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Data mining</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Data merging</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session3/Session3.ipynb">Basic statistics</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session3/Session3.ipynb">Charting</a></li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session4_Solutions/Session4_Solutions.ipynb">Intro to basic machine learning</a> (for complete beginners)
 <br/>
 <br/></li>
 </ul></li>
