adding Edinburgh presentation

--- a/content/posters.html
+++ b/content/posters.html
@@ -5,6 +5,9 @@ date: "06/10/2019"
 output: html_document
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+<link href="/rmarkdown-libs/anchor-sections/anchor-sections.css" rel="stylesheet" />
+<script src="/rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
 <hr />
@@ -41,6 +44,14 @@ output: html_document
 <h1>Talks/Presentations</h1>
 <hr />
 <p><br/></p>
+<div id="edinburgh-university---december-2020" class="section level4">
+<h4>Edinburgh University - December 2020</h4>
+<ul>
+<li>Presentation:
+<a href="https://jodielord.netlify.com/Edinburgh_dec2020.pdf">“Disentangling independent and mediated causal relationships between blood metabolites and Alzheimer’s Disease”</a>.</li>
+</ul>
+<p><br/></p>
+</div>
 <div id="staistical-genetics-unit---october-2020" class="section level4">
 <h4>Staistical Genetics Unit - October 2020</h4>
 <ul>
