--- a/public/404.html
+++ b/public/404.html
@@ -285,7 +285,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/posters"><span>Posters & Talks</span></a>
+          <a class="nav-link " href="/posters"><span>Talks & Posters</span></a>
         </li>
 
         
