--- a/public/courses/example/example2/index.html
+++ b/public/courses/example/example2/index.html
@@ -292,7 +292,7 @@ Tip 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/posters"><span>Posters & Talks</span></a>
+          <a class="nav-link " href="/posters"><span>Talks & Posters</span></a>
         </li>
 
         
