--- a/content/posters.html
+++ b/content/posters.html
@@ -11,37 +11,8 @@ output: html_document
 
 
 <hr />
-<div id="academic-posters" class="section level1">
-<h1>Academic Posters</h1>
-<hr />
-<p><br/></p>
-<div id="iscb-poster-2020" class="section level4">
-<h4>ISCB Poster 2020</h4>
-<ul>
-<li><a href="https://jodielord.netlify.com/ISCB_poster_2020_animated.gif">Link to work</a> presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
-<br/>
-<br/></li>
-</ul>
-</div>
-<div id="wcpg-poster-2019" class="section level4">
-<h4>WCPG Poster 2019</h4>
-<ul>
-<li><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to poster</a> presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.
-<br/>
-<br/></li>
-</ul>
-</div>
-<div id="nihr-biomedical-research-council-poster-2019" class="section level4">
-<h4>NIHR Biomedical Research Council Poster 2019</h4>
-<ul>
-<li><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Maudsley Conference, London.</li>
-</ul>
-<p><br/></p>
-<hr />
-</div>
-</div>
-<div id="talkspresentations" class="section level1">
-<h1>Talks/Presentations</h1>
+<div id="talks-presentations" class="section level1">
+<h1>Talks &amp; Presentations</h1>
 <hr />
 <p><br/></p>
 <div id="edinburgh-university---december-2020" class="section level4">
@@ -75,7 +46,35 @@ output: html_document
 <a href="https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf">“Investigating the role of modifiable risk factors on the causal pathway to Alzheimer’s Disease”</a>.</li>
 </ul>
 <p><br/>
-<br/></p>
+_______________________________________________________________________</p>
+</div>
+</div>
+<div id="academic-posters" class="section level1">
+<h1>Academic Posters</h1>
+<hr />
+<p><br/></p>
+<div id="iscb-poster-2020" class="section level4">
+<h4>ISCB Poster 2020</h4>
+<ul>
+<li><a href="https://jodielord.netlify.com/ISCB_poster_2020_animated.gif">Link to work</a> presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
+<br/>
+<br/></li>
+</ul>
+</div>
+<div id="wcpg-poster-2019" class="section level4">
+<h4>WCPG Poster 2019</h4>
+<ul>
+<li><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to poster</a> presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.
+<br/>
+<br/></li>
+</ul>
+</div>
+<div id="nihr-biomedical-research-council-poster-2019" class="section level4">
+<h4>NIHR Biomedical Research Council Poster 2019</h4>
+<ul>
+<li><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Maudsley Conference, London.</li>
+</ul>
+<p><br/></p>
 <hr />
 <p><br/></p>
 </div>
