Updating web content

--- a/public/posters/index.html
+++ b/public/posters/index.html
@@ -29,9 +29,11 @@
     
   
   <meta name="description" content="Talks &amp; Presentations 
-Edinburgh University - December 2020  Presentation: “Disentangling independent and mediated causal relationships between blood metabolites and Alzheimer’s Disease”.  
- Staistical Genetics Unit - October 2020  Journal Club Presentation: “A Fast and Scalable Framework for Large-scale and Ultrahigh-dimensional Sparse Regression with Application in the Uk Biobank”.  
- Social, Genetic and Developmental Psychiatry Centre (SGDP) - 2020  SGU Methods Meeting: “Mendelian Randomization: Introduction to methods and applications”.">
+Edinburgh University - December 2020 Disentangling independent and mediated causal relationships between blood metabolites and Alzheimer’s Disease.
+
+ Staistical Genetics Unit Journal Club (SGDP) - October 2020 A Fast and Scalable Framework for Large-scale and Ultrahigh-dimensional Sparse Regression with Application in the Uk Biobank.
+
+ Statistical Genetics Unit Methods Meeting (SGDP) - 2020 Mendelian Randomization: Introduction to methods and applications.">
 
   
   <link rel="alternate" hreflang="en-us" href="/posters/">
@@ -121,9 +123,11 @@ Edinburgh University - December 2020  Presentation: “Disentangling independent
   <meta property="og:url" content="/posters/">
   <meta property="og:title" content=" | Jodie Lord, King&#39;s College London">
   <meta property="og:description" content="Talks &amp; Presentations 
-Edinburgh University - December 2020  Presentation: “Disentangling independent and mediated causal relationships between blood metabolites and Alzheimer’s Disease”.  
- Staistical Genetics Unit - October 2020  Journal Club Presentation: “A Fast and Scalable Framework for Large-scale and Ultrahigh-dimensional Sparse Regression with Application in the Uk Biobank”.  
- Social, Genetic and Developmental Psychiatry Centre (SGDP) - 2020  SGU Methods Meeting: “Mendelian Randomization: Introduction to methods and applications”."><meta property="og:image" content="/img/icon-192.png">
+Edinburgh University - December 2020 Disentangling independent and mediated causal relationships between blood metabolites and Alzheimer’s Disease.
+
+ Staistical Genetics Unit Journal Club (SGDP) - October 2020 A Fast and Scalable Framework for Large-scale and Ultrahigh-dimensional Sparse Regression with Application in the Uk Biobank.
+
+ Statistical Genetics Unit Methods Meeting (SGDP) - 2020 Mendelian Randomization: Introduction to methods and applications."><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
@@ -464,34 +468,22 @@ Edinburgh University - December 2020  Presentation: “Disentangling independent
 <p><br/></p>
 <div id="edinburgh-university---december-2020" class="section level4">
 <h4>Edinburgh University - December 2020</h4>
-<ul>
-<li>Presentation:
-<a href="https://jodielord.netlify.com/Edinburgh_dec2020.pdf">“Disentangling independent and mediated causal relationships between blood metabolites and Alzheimer’s Disease”</a>.</li>
-</ul>
+<p><a href="https://jodielord.netlify.com/Edinburgh_dec2020.pdf">Disentangling independent and mediated causal relationships between blood metabolites and Alzheimer’s Disease.</a></p>
 <p><br/></p>
 </div>
-<div id="staistical-genetics-unit---october-2020" class="section level4">
-<h4>Staistical Genetics Unit - October 2020</h4>
-<ul>
-<li>Journal Club Presentation:
-<a href="https://jodielord.netlify.com/JournalClub_1020.pdf">“A Fast and Scalable Framework for Large-scale and Ultrahigh-dimensional Sparse Regression with Application in the Uk Biobank”</a>.</li>
-</ul>
+<div id="staistical-genetics-unit-journal-club-sgdp---october-2020" class="section level4">
+<h4>Staistical Genetics Unit Journal Club (SGDP) - October 2020</h4>
+<p><a href="https://jodielord.netlify.com/JournalClub_1020.pdf">A Fast and Scalable Framework for Large-scale and Ultrahigh-dimensional Sparse Regression with Application in the Uk Biobank.</a></p>
 <p><br/></p>
 </div>
-<div id="social-genetic-and-developmental-psychiatry-centre-sgdp---2020" class="section level4">
-<h4>Social, Genetic and Developmental Psychiatry Centre (SGDP) - 2020</h4>
-<ul>
-<li>SGU Methods Meeting:
-<a href="https://jodielord.netlify.com/methods_meeting_MR_JL_2020.pdf">“Mendelian Randomization: Introduction to methods and applications”</a>.</li>
-</ul>
+<div id="statistical-genetics-unit-methods-meeting-sgdp---2020" class="section level4">
+<h4>Statistical Genetics Unit Methods Meeting (SGDP) - 2020</h4>
+<p><a href="https://jodielord.netlify.com/methods_meeting_MR_JL_2020.pdf">Mendelian Randomization: Introduction to methods and applications.</a></p>
 <p><br/></p>
 </div>
-<div id="maurice-wohl-clinical-neuroscience-institute---2019" class="section level4">
-<h4>Maurice Wohl Clinical Neuroscience Institute - 2019</h4>
-<ul>
-<li>Center Talk:
-<a href="https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf">“Investigating the role of modifiable risk factors on the causal pathway to Alzheimer’s Disease”</a>.</li>
-</ul>
+<div id="maurice-wohl-clinical-neuroscience-institute-centre-talk---2019" class="section level4">
+<h4>Maurice Wohl Clinical Neuroscience Institute Centre Talk - 2019</h4>
+<p><a href="https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf">Investigating the role of modifiable risk factors on the causal pathway to Alzheimer’s Disease.</a></p>
 <p><br/>
 _______________________________________________________________________</p>
 </div>
@@ -501,26 +493,20 @@ _______________________________________________________________________</p>
 <hr />
 <p><br/></p>
 <div id="iscb-poster-2020" class="section level4">
-<h4>ISCB Poster 2020</h4>
-<ul>
-<li><a href="https://jodielord.netlify.com/ISCB_poster_2020_animated.gif">Link to work</a> presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
+<h4><a href="https://jodielord.netlify.com/ISCB_poster_2020_animated.gif">ISCB Poster 2020</a></h4>
+<p>Presented International Society of Clinical Biostatistics 2020 annual conference, hosted virtually (due to ongoing COVID-19).
 <br/>
-<br/></li>
-</ul>
+<br/></p>
 </div>
 <div id="wcpg-poster-2019" class="section level4">
-<h4>WCPG Poster 2019</h4>
-<ul>
-<li><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">Link to poster</a> presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.
+<h4><a href="https://jodielord.netlify.com/WCPG2019_JodieLord.pdf">WCPG Poster 2019</a></h4>
+<p>Presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles. <em>Winner: Early career investigator programme award.</em>
 <br/>
-<br/></li>
-</ul>
+<br/></p>
 </div>
 <div id="nihr-biomedical-research-council-poster-2019" class="section level4">
-<h4>NIHR Biomedical Research Council Poster 2019</h4>
-<ul>
-<li><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">Link to poster</a> presented at the 2019 NIHR BRC Maudsley Conference, London.</li>
-</ul>
+<h4><a href="https://jodielord.netlify.com/JL_BRC_Poster2019.pdf">NIHR Biomedical Research Council Poster 2019</a></h4>
+<p>Presented at the 2019 NIHR BRC Maudsley Conference, London.</p>
 <p><br/></p>
 <hr />
 <p><br/></p>
