--- a/content/teaching.html
+++ b/content/teaching.html
@@ -5,20 +5,23 @@ date: "06/10/2019"
 output: html_document
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+<link href="/rmarkdown-libs/anchor-sections/anchor-sections.css" rel="stylesheet" />
+<script src="/rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
 <hr />
 <div id="learning-material" class="section level1">
 <h1>Learning Material</h1>
 <hr />
-<div id="python-workshop-material-and-solutions" class="section level4">
-<h4>Python workshop material and solutions</h4>
+<div id="python-workshop-materials-and-solutions" class="section level4">
+<h4><a href="https://github.com/jodielord/python_teaching_material">Python workshop materials and solutions</a></h4>
 <ul>
-<li><a href="https://github.com/jodielord/python_teaching_material">Material and solutions</a> across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:
+<li>Material and solutions across 4 introductory Python workshops. Intended for complete beginners. Topics covered include:
 <ul>
 <li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Object assignment</a></li>
 <li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Basic arithmetic</a></li>
-<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Core data types</a> (integers, lists, dictionaries etc)</li>
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Core data types</a></li>
 <li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session1/session1.ipynb">Slicing</a></li>
 <li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Loops</a><br />
 </li>
@@ -28,7 +31,8 @@ output: html_document
 <li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session2/Session2.ipynb">Data merging</a></li>
 <li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session3/Session3.ipynb">Basic statistics</a></li>
 <li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session3/Session3.ipynb">Charting</a></li>
-<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session4_Solutions/Session4_Solutions.ipynb">Intro to basic machine learning</a> (for complete beginners)
+<li><a href="https://github.com/jodielord/python_teaching_material/blob/master/Session4_Solutions/Session4_Solutions.ipynb">Introduction to machine learning</a></li>
+<li><a href="https://jodielord.netlify.com/python_workshop_faqs.pdf">Extra Resources and FAQs</a>
 <br/>
 <br/></li>
 </ul></li>
